kubernetes/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: homer.rke2.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer-service
                port:
                  number: 80
